// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WAN/> Snapshot WAN IPv4 (PPPoE). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -45,30 +45,64 @@
        <div
          class=\\"mb-3\\"
        >
          <label
            class=\\"form-label\\"
-           for=\\"2\\"
+           for=\\"6\\"
          >
-           DHCP hostname
+           PAP/CHAP username
          </label>
          <div
            class=\\"input-group\\"
          >
            <input
-             class=\\"form-control\\"
-             id=\\"2\\"
+             class=\\"form-control is-invalid\\"
+             id=\\"6\\"
+             required=\\"\\"
              type=\\"text\\"
              value=\\"\\"
            />
          </div>
          <div
-           class=\\"form-text\\"
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"7\\"
+         >
+           PAP/CHAP password
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             autocomplete=\\"current-password\\"
+             class=\\"form-control is-invalid\\"
+             id=\\"7\\"
+             required=\\"\\"
+             type=\\"password\\"
+             value=\\"\\"
+           />
+           <button
+             class=\\"input-group-text\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fa\\"
+             />
+           </button>
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
          >
-           <small>
-             Hostname which will be provided to DHCP server.
-           </small>
+           This field is required.
          </div>
        </div>
        <h2>
          IPv6 Settings
        </h2>
@@ -167,10 +201,11 @@
        <div
          class=\\"text-end\\"
        >
          <button
            class=\\"btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            <span>
              Save
            </span>"
`;

exports[`<WAN/> Snapshot WAN IPv4 (static). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -45,29 +45,134 @@
        <div
          class=\\"mb-3\\"
        >
          <label
            class=\\"form-label\\"
-           for=\\"2\\"
+           for=\\"6\\"
+         >
+           IP address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"6\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"7\\"
+         >
+           Network mask
+         </label>
+         <div
+           class=\\"input-group\\"
          >
-           DHCP hostname
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"7\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"8\\"
+         >
+           Gateway
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"8\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"9\\"
+         >
+           DNS server 1
          </label>
          <div
            class=\\"input-group\\"
          >
            <input
              class=\\"form-control\\"
-             id=\\"2\\"
+             id=\\"9\\"
              type=\\"text\\"
              value=\\"\\"
            />
          </div>
          <div
            class=\\"form-text\\"
          >
            <small>
-             Hostname which will be provided to DHCP server.
+             DNS server address is not required as the built-in DNS resolver is capable of working without it.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"10\\"
+         >
+           DNS server 2
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"10\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             DNS server address is not required as the built-in DNS resolver is capable of working without it.
            </small>
          </div>
        </div>
        <h2>
          IPv6 Settings
@@ -167,10 +272,11 @@
        <div
          class=\\"text-end\\"
        >
          <button
            class=\\"btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            <span>
              Save
            </span>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (6in4), dynamic IPv4 handling enabled. 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -240,10 +240,109 @@
            <small>
              Some tunnel providers allow you to have public dynamic IPv4. Note that you need to fill in some extra fields to make it work.
            </small>
          </div>
        </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"10\\"
+         >
+           Tunnel ID
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"10\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             ID of your tunnel which was assigned to you by the provider.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"11\\"
+         >
+           Username
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"11\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             Username which will be used to provide credentials to your tunnel provider.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"12\\"
+         >
+           Key
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"12\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             Key which will be used to provide credentials to your tunnel provider.
+           </small>
+         </div>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-check form-switch mb-3\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (6in4). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -110,10 +110,140 @@
            >
              Disable IPv6
            </option>
          </select>
        </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"6\\"
+         >
+           Provider IPv4
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"6\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             This address will be used as a endpoint of the tunnel on the provider's side.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"7\\"
+         >
+           Routed IPv6 prefix
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"7\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             IPv6 addresses which will be routed to your network.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"8\\"
+         >
+           MTU
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"8\\"
+             max=\\"1480\\"
+             min=\\"1280\\"
+             required=\\"\\"
+             type=\\"number\\"
+             value=\\"\\"
+           />
+           <button
+             aria-label=\\"Increase value. Hint: Hold to increase faster.\\"
+             class=\\"btn btn-outline-secondary\\"
+             title=\\"Increase value. Hint: Hold to increase faster.\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fa\\"
+             />
+           </button>
+           <button
+             aria-label=\\"Decrease value. Hint: Hold to decrease faster.\\"
+             class=\\"btn btn-outline-secondary\\"
+             title=\\"Decrease value. Hint: Hold to decrease faster.\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fa\\"
+             />
+           </button>
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"mb-3 form-check\\"
+       >
+         <input
+           class=\\"form-check-input\\"
+           id=\\"9\\"
+           type=\\"checkbox\\"
+         />
+         <label
+           class=\\"form-check-label\\"
+           for=\\"9\\"
+         >
+           Dynamic IPv4 handling
+         </label>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             Some tunnel providers allow you to have public dynamic IPv4. Note that you need to fill in some extra fields to make it work.
+           </small>
+         </div>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-check form-switch mb-3\\"
@@ -167,10 +297,11 @@
        <div
          class=\\"text-end\\"
        >
          <button
            class=\\"btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            <span>
              Save
            </span>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (6to4). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -110,10 +110,37 @@
            >
              Disable IPv6
            </option>
          </select>
        </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"6\\"
+         >
+           Public IPv4
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"6\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             In order to use 6to4 protocol, you might need to specify your public IPv4 address manually (e.g. when your WAN interface has a private address which is mapped to public IP).
+           </small>
+         </div>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-check form-switch mb-3\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (DHCPv6). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -110,10 +110,37 @@
            >
              Disable IPv6
            </option>
          </select>
        </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"6\\"
+         >
+           Custom DUID
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"6\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             DUID which will be provided to the DHCPv6 server.
+           </small>
+         </div>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-check form-switch mb-3\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (static). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -110,10 +110,156 @@
            >
              Disable IPv6
            </option>
          </select>
        </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"6\\"
+         >
+           Address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"6\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             IPv6 address and prefix length for WAN interface e.g. 2001:db8:be13:37da::1/64
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"7\\"
+         >
+           Gateway
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"7\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"8\\"
+         >
+           Prefix
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"8\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             Address range for local network, e.g. 2001:db8:be13:37da::/64
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"9\\"
+         >
+           DNS server 1
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"9\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             DNS server address is not required as the built-in DNS resolver is capable of working without it.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"10\\"
+         >
+           DNS server 2
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"10\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             DNS server address is not required as the built-in DNS resolver is capable of working without it.
+           </small>
+         </div>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-check form-switch mb-3\\"
@@ -167,10 +313,11 @@
        <div
          class=\\"text-end\\"
        >
          <button
            class=\\"btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            <span>
              Save
            </span>"
`;

exports[`<WAN/> Snapshot: MAC enabled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -136,10 +136,69 @@
            <small>
              Useful in cases, when a specific MAC address is required by your internet service provider.
            </small>
          </div>
        </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"6\\"
+         >
+           Current MAC address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             disabled=\\"\\"
+             id=\\"6\\"
+             type=\\"text\\"
+             value=\\"00:00:00:00:00:00\\"
+           />
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             MAC address of the WAN interface.
+           </small>
+         </div>
+       </div>
+       <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"7\\"
+         >
+           Set the new MAC address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control is-invalid\\"
+             id=\\"7\\"
+             type=\\"text\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             Colon is used as a separator, for example 00:11:22:33:44:55
+           </small>
+         </div>
+       </div>
        <h2>
          VLAN Settings
        </h2>
        <div
          class=\\"form-check form-switch mb-3\\"
@@ -167,10 +226,11 @@
        <div
          class=\\"text-end\\"
        >
          <button
            class=\\"btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            <span>
              Save
            </span>"
`;

exports[`<WAN/> Snapshot: VLAN enabled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -163,10 +163,60 @@
              Useful in cases when a specific VLAN ID is required by your internet service provider.
            </small>
          </div>
        </div>
        <div
+         class=\\"mb-3\\"
+       >
+         <label
+           class=\\"form-label\\"
+           for=\\"6\\"
+         >
+           Set the VLAN ID
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"6\\"
+             max=\\"4094\\"
+             min=\\"1\\"
+             required=\\"\\"
+             type=\\"number\\"
+             value=\\"1\\"
+           />
+           <button
+             aria-label=\\"Increase value. Hint: Hold to increase faster.\\"
+             class=\\"btn btn-outline-secondary\\"
+             title=\\"Increase value. Hint: Hold to increase faster.\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fa\\"
+             />
+           </button>
+           <button
+             aria-label=\\"Decrease value. Hint: Hold to decrease faster.\\"
+             class=\\"btn btn-outline-secondary\\"
+             title=\\"Decrease value. Hint: Hold to decrease faster.\\"
+             type=\\"button\\"
+           >
+             <i
+               class=\\"fa\\"
+             />
+           </button>
+         </div>
+         <div
+           class=\\"form-text\\"
+         >
+           <small>
+             VLAN ID must be a number in the range between 1 and 4094.
+           </small>
+         </div>
+       </div>
+       <div
          class=\\"text-end\\"
        >
          <button
            class=\\"btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center\\"
            type=\\"submit\\""
`;

exports[`<WAN/> Snapshot: WAN IPv4 DHCP, WAN IPv6 DHCP, MAC disabled, VLAN disabled 1`] = `
<DocumentFragment>
  <h1>
    WAN
  </h1>
  <p>
    Here you can specify your WAN port settings if instructed to do so by your ISP (internet service provider). Usually, it can be left untouched if your router is connected to the Internet via a cable or DSL modem.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        IPv4 Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          IPv4 protocol
        </label>
        <select
          class="form-select"
          id="1"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
          <option
            value="pppoe"
          >
            PPPoE (for DSL bridges, etc.)
          </option>
        </select>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          DHCP hostname
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Hostname which will be provided to DHCP server.
          </small>
        </div>
      </div>
      <h2>
        IPv6 Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          IPv6 protocol
        </label>
        <select
          class="form-select"
          id="3"
        >
          <option
            value="dhcpv6"
          >
            DHCPv6 (automatic configuration)
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
          <option
            value="6to4"
          >
            6to4 (public IPv4 address required)
          </option>
          <option
            value="6in4"
          >
            6in4 (public IPv4 address required)
          </option>
          <option
            value="none"
          >
            Disable IPv6
          </option>
        </select>
      </div>
      <h2>
        MAC Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="4"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Custom MAC address
        </label>
        <div
          class="form-text"
        >
          <small>
            Useful in cases, when a specific MAC address is required by your internet service provider.
          </small>
        </div>
      </div>
      <h2>
        VLAN Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="5"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="5"
        >
          Enable VLAN
        </label>
        <div
          class="form-text"
        >
          <small>
            Useful in cases when a specific VLAN ID is required by your internet service provider.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Connection Test
    </h2>
    <p>
      Here you can examine your connection settings. Wait a while to establish the connection. Remember to click the 
      <b>
        Save
      </b>
       button after you have tested that it works.
    </p>
    <table
      class="table table-borderless table-hover col-sm-12"
    >
      <tbody>
        <tr>
          <th
            scope="row"
          >
            IPv4 connectivity
          </th>
          <td
            class="text-end"
          >
            <span
              class="text-secondary"
            >
              <i
                class="fa"
              />
            </span>
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            IPv4 gateway connectivity
          </th>
          <td
            class="text-end"
          >
            <span
              class="text-secondary"
            >
              <i
                class="fa"
              />
            </span>
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            IPv6 connectivity
          </th>
          <td
            class="text-end"
          >
            <span
              class="text-secondary"
            >
              <i
                class="fa"
              />
            </span>
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            IPv6 gateway connectivity
          </th>
          <td
            class="text-end"
          >
            <span
              class="text-secondary"
            >
              <i
                class="fa"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="text-end"
    >
      <button
        class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        type="submit"
      >
        <span>
          Test connection
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
